metadata/objects/Vedamo_User__c.object
<CustomObject>
    <fields>
        <fullName>API_Object_Status__c</fullName>
        <defaultValue>&apos;active&apos;</defaultValue>
        <label>API Object Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>active</fullName>
                </value>
                <value>
                    <fullName>deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>API_Operation_Error__c</fullName>
        <label>API Operation Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Operation_Status__c</fullName>
        <label>API Operation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_User_ID__c</fullName>
        <label>API User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <defaultValue>&quot;user&quot;</defaultValue>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>user</fullName>
                </value>
                <value>
                    <fullName>teacher</fullName>
                </value>
                <value>
                    <fullName>admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Vedamo User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Vedamo User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vedamo Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>